Bug 1415627, only calculate the offset that positions the current selection over the menulist button when the popup is first opened. After that use that cached value. r=mstange